--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -20,83 +20,130 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/add_card_category_tv"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/margin"
-                android:text="@string/add_card_category_tv_txt"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                android:background="@drawable/section"
+                android:orientation="vertical"
+                android:padding="@dimen/margin">
 
-            <EditText
-                android:id="@+id/add_card_category_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:ems="10"
-                android:hint="@string/add_card_category_et_hint"
-                android:inputType="text"
-                android:textSize="@dimen/font_size" />
+                <TextView
+                    android:id="@+id/add_card_category_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/label_margin"
+                    android:fontFamily="sans-serif-light"
+                    android:text="@string/add_card_category_tv_txt"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
 
-            <TextView
-                android:id="@+id/add_card_ques_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:text="@string/add_card_ques_tv_txt"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                <EditText
+                    android:id="@+id/add_card_category_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:fontFamily="sans-serif-light"
+                    android:hint="@string/add_card_category_et_hint"
+                    android:inputType="text"
+                    android:padding="@dimen/margin"
+                    android:textSize="@dimen/font_size" />
+            </LinearLayout>
 
-            <EditText
-                android:id="@+id/add_card_ques_et"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/margin"
-                android:ems="10"
-                android:hint="@string/add_card_ques_et_hint"
-                android:inputType="textMultiLine|text"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                android:background="@drawable/section"
+                android:orientation="vertical"
+                android:padding="@dimen/margin">
 
-            <TextView
-                android:id="@+id/add_card_ans_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:text="@string/add_card_ans_tv_txt"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                <TextView
+                    android:id="@+id/add_card_ques_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/label_margin"
+                    android:fontFamily="sans-serif-light"
+                    android:text="@string/add_card_ques_tv_txt"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
 
-            <EditText
-                android:id="@+id/add_card_ans_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:ems="10"
-                android:hint="@string/add_card_ans_et_hint"
-                android:inputType="textMultiLine|text"
-                android:textSize="@dimen/font_size" />
+                <EditText
+                    android:id="@+id/add_card_ques_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:fontFamily="sans-serif-light"
+                    android:hint="@string/add_card_ques_et_hint"
+                    android:inputType="textMultiLine|text"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:padding="@dimen/margin"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/add_card_desc_tv"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/margin"
-                android:text="@string/add_card_desc_tv_txt"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                android:background="@drawable/section"
+                android:orientation="vertical"
+                android:padding="@dimen/margin">
 
-            <EditText
-                android:id="@+id/add_card_desc_et"
+                <TextView
+                    android:id="@+id/add_card_ans_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/label_margin"
+                    android:fontFamily="sans-serif-light"
+                    android:text="@string/add_card_ans_tv_txt"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
+
+                <EditText
+                    android:id="@+id/add_card_ans_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:fontFamily="sans-serif-light"
+                    android:hint="@string/add_card_ans_et_hint"
+                    android:inputType="textMultiLine|text"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:padding="@dimen/margin"
+                    android:textSize="@dimen/font_size" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/margin"
-                android:ems="10"
-                android:hint="@string/add_card_desc_et_hint"
-                android:imeOptions="normal"
-                android:inputType="textMultiLine|text"
-                android:textSize="@dimen/font_size" />
+                android:background="@drawable/section"
+                android:orientation="vertical"
+                android:padding="@dimen/margin">
+
+                <TextView
+                    android:id="@+id/add_card_desc_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/label_margin"
+                    android:fontFamily="sans-serif-light"
+                    android:text="@string/add_card_desc_tv_txt"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
+
+                <EditText
+                    android:id="@+id/add_card_desc_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:fontFamily="sans-serif-light"
+                    android:hint="@string/add_card_desc_et_hint"
+                    android:imeOptions="normal"
+                    android:inputType="textMultiLine|text"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:padding="@dimen/margin"
+                    android:textSize="@dimen/font_size" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -110,7 +157,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/margin"
                     android:layout_weight="1"
-                    android:background="@color/button"
+                    android:background="@drawable/button"
                     android:onClick="cancel"
                     android:text="@string/add_card_cancel_btn_txt"
                     android:textAllCaps="false"
@@ -123,7 +170,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/margin"
                     android:layout_weight="1"
-                    android:background="@color/button"
+                    android:background="@drawable/button"
                     android:onClick="confirm"
                     android:text="@string/add_card_confirm_btn_txt"
                     android:textAllCaps="false"
