--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/card"
     tools:context=".EditCardActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,81 +20,133 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/edit_card_category_tv"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/margin"
-                android:text="@string/edit_card_category_tv_txt"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                android:background="@drawable/section"
+                android:orientation="vertical"
+                android:padding="@dimen/margin">
 
-            <EditText
-                android:id="@+id/edit_card_category_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:ems="10"
-                android:hint="@string/edit_card_category_et_hint"
-                android:inputType="text"
-                android:textSize="@dimen/font_size" />
+                <TextView
+                    android:id="@+id/edit_card_category_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/label_margin"
+                    android:fontFamily="sans-serif-light"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:text="@string/edit_card_category_tv_txt"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
 
-            <TextView
-                android:id="@+id/edit_card_ques_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:text="@string/edit_card_ques_tv_txt"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                <EditText
+                    android:id="@+id/edit_card_category_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:fontFamily="sans-serif-light"
+                    android:hint="@string/edit_card_category_et_hint"
+                    android:inputType="text"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:padding="@dimen/margin"
+                    android:textSize="@dimen/font_size" />
+            </LinearLayout>
 
-            <EditText
-                android:id="@+id/edit_card_ques_et"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/margin"
-                android:ems="10"
-                android:hint="@string/edit_card_ques_et_hint"
-                android:inputType="textMultiLine|text"
-                android:textSize="@dimen/font_size" />
+                android:background="@drawable/section"
+                android:orientation="vertical"
+                android:padding="@dimen/margin">
 
-            <TextView
-                android:id="@+id/edit_card_ans_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:text="@string/edit_card_ans_tv_txt"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                <TextView
+                    android:id="@+id/edit_card_ques_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/label_margin"
+                    android:fontFamily="sans-serif-light"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:text="@string/edit_card_ques_tv_txt"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
 
-            <EditText
-                android:id="@+id/edit_card_ans_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:ems="10"
-                android:hint="@string/edit_card_ans_et_hint"
-                android:inputType="textMultiLine|text"
-                android:textSize="@dimen/font_size" />
+                <EditText
+                    android:id="@+id/edit_card_ques_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:fontFamily="sans-serif-light"
+                    android:hint="@string/edit_card_ques_et_hint"
+                    android:inputType="textMultiLine|text"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:padding="@dimen/margin"
+                    android:textSize="@dimen/font_size" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/edit_card_desc_tv"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/margin"
-                android:text="@string/edit_card_desc_tv_txt"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/font_size" />
+                android:background="@drawable/section"
+                android:orientation="vertical"
+                android:padding="@dimen/margin">
 
-            <EditText
-                android:id="@+id/edit_card_desc_et"
+                <TextView
+                    android:id="@+id/edit_card_ans_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/label_margin"
+                    android:fontFamily="sans-serif-light"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:text="@string/edit_card_ans_tv_txt"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
+
+                <EditText
+                    android:id="@+id/edit_card_ans_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:fontFamily="sans-serif-light"
+                    android:hint="@string/edit_card_ans_et_hint"
+                    android:inputType="textMultiLine|text"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:padding="@dimen/margin"
+                    android:textSize="@dimen/font_size" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/margin"
-                android:ems="10"
-                android:hint="@string/edit_card_desc_et_hint"
-                android:inputType="textMultiLine|text"
-                android:textSize="@dimen/font_size" />
+                android:background="@drawable/section"
+                android:orientation="vertical"
+                android:padding="@dimen/margin">
+
+                <TextView
+                    android:id="@+id/edit_card_desc_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/label_margin"
+                    android:fontFamily="sans-serif-light"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:text="@string/edit_card_desc_tv_txt"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/font_size" />
+
+                <EditText
+                    android:id="@+id/edit_card_desc_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:fontFamily="sans-serif-light"
+                    android:hint="@string/edit_card_desc_et_hint"
+                    android:inputType="textMultiLine|text"
+                    android:lineSpacingExtra="@dimen/line_spacing"
+                    android:padding="@dimen/margin"
+                    android:textSize="@dimen/font_size" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -107,7 +159,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/margin"
                     android:layout_weight="1"
-                    android:background="@color/button"
+                    android:background="@drawable/button"
                     android:onClick="cancel"
                     android:text="@string/edit_card_cancel_btn_txt"
                     android:textAllCaps="false"
@@ -119,7 +171,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/margin"
                     android:layout_weight="1"
-                    android:background="@color/button"
+                    android:background="@drawable/button"
                     android:onClick="confirm"
                     android:text="@string/edit_card_confirm_btn_txt"
                     android:textAllCaps="false"
