--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="card">#F8E992</color>
-    <color name="button">#FFFFFF</color>
+    <color name="colorPrimary">#FD9862</color>
+    <color name="colorPrimaryDark">#EC8751</color>
+    <color name="colorAccent">#FD9862</color>
+    <color name="card">#EEE</color>
 </resources>
